{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 13,
  "lineage": "ede85579-e7dd-af1f-150d-384758363fc4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/networkSecurityGroups/nsg-web-tier",
            "location": "eastus",
            "name": "nsg-web-tier",
            "resource_group_name": "rg-vj-testphase1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "49.207.193.10/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-https",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/networkSecurityGroups/nsg-web-tier/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "nsg-web-tier",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-vj-testphase1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/networkSecurityGroups/nsg-web-tier/securityRules/allow-https",
            "name": "allow-https",
            "network_security_group_name": "nsg-web-tier",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg-vj-testphase1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/networkSecurityGroups/nsg-web-tier/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "nsg-web-tier",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg-vj-testphase1",
            "source_address_prefix": "49.207.193.10/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.6.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/virtualNetworks/vnet-scenario-one/subnets/db-tier-subnet",
            "name": "db-tier-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vj-testphase1",
            "virtual_network_name": "vnet-scenario-one"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/virtualNetworks/vnet-scenario-one/subnets/web-tier-subnet",
            "name": "web-tier-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vj-testphase1",
            "virtual_network_name": "vnet-scenario-one"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/virtualNetworks/vnet-scenario-one/subnets/web-tier-subnet",
            "network_security_group_id": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/networkSecurityGroups/nsg-web-tier",
            "subnet_id": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/virtualNetworks/vnet-scenario-one/subnets/web-tier-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9d928f92-acef-47b8-8e99-f2a5d6db6f1b",
            "id": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/virtualNetworks/vnet-scenario-one",
            "location": "eastus",
            "name": "vnet-scenario-one",
            "resource_group_name": "rg-vj-testphase1",
            "subnet": [
              {
                "address_prefix": "10.0.5.0/24",
                "id": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/virtualNetworks/vnet-scenario-one/subnets/web-tier-subnet",
                "name": "web-tier-subnet",
                "security_group": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/networkSecurityGroups/nsg-web-tier"
              },
              {
                "address_prefix": "10.0.6.0/24",
                "id": "/subscriptions/227dd3fd-8b44-4c5a-9e15-d762852290c3/resourceGroups/rg-vj-testphase1/providers/Microsoft.Network/virtualNetworks/vnet-scenario-one/subnets/db-tier-subnet",
                "name": "db-tier-subnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}